--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,46 @@
-.firsthead{
+
+
+.email {
+  border-radius: 4px;
 
 }
-.email{
-text-align:  ;
+
+.inputemail {
+  border-radius: 4px;
+  background-color: antiquewhite  ;
 }
-.inputemail{
-  text-align: right;
-}
-.div1{
+
+.div1 {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 1 00px;
-  width: 300px;
+  margin-top: 100px;
+  width: 190px;
   text-align: center;
   /* border: 1px solid red ; */
 }
-div2{
+
+div2 {
   text-align: left;
 }
-.link{
+
+.link {
   text-decoration: none;
+}
+
+.email{
+text-align: right;
+}
+.password{
+  text-align: right;
+}
+.repeat-password{
+  text-align: right;
+}
+.div2{
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  width: 194px;
+  text-align: center;
+  /* border: 1px solid red ; */
 }
