--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 .email {
   border-radius: 4px;
 
@@ -7,7 +5,7 @@
 
 .inputemail {
   border-radius: 4px;
-  background-color: antiquewhite  ;
+  background-color: antiquewhite;
 }
 
 .div1 {
@@ -15,9 +13,7 @@
   margin-right: auto;
   margin-top: 100px;
   width: 302px;
-  /* padding: 20px; */
   text-align: center;
-  /* border: 1px solid red ; */
 }
 
 
@@ -25,33 +21,43 @@
   text-decoration: none;
 }
 
-.email{
-text-align: right;
-}
-.password{
+.email {
   text-align: right;
 }
-.repeat-password{
+
+.password {
   text-align: right;
 }
-.div2{
+
+.repeat-password {
+  text-align: right;
+}
+
+.div2 {
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
-  width: 194px;
+  width: 301px;
   text-align: center;
-  /* border: 1px solid red ; */
 }
-.input-group-text{
-color:brown ;
-background:#E9ECEF ;
-padding:6px 12px ;
+
+.input-group-text {
+  color: brown;
+  background: #E9ECEF;
+  padding: 6px 12px;
 
 }
-.form-control{
-  background:#FFFFFF ;
+
+.form-control {
+  background: #FFFFFF;
   padding: 6px 12px;
 }
-#btn{
+
+#btn {
   width: 301px;
+}
+
+#btn-success {
+  margin-right: 294px;
+  margin-top: 20px;
 }
